# BrabeNetz

./: .gitignore  BUILD.md  BrabeNetz.sln  CppNeuralNetwork.sln  DESCRIPTION.md  README.md  make.sh
BrabeNetz/: BrabeNetz.cpp  BrabeNetz.h  BrabeNetz.vcxproj  BrabeNetz.vcxproj.filters  CMakeLists.txt  Connection.cpp  Connection.h  Extensions.cpp  Extensions.h  Functions.cpp  Functions.h  Globals.h  Information.cpp  Information.h  Layer.cpp  Layer.h  Network.cpp  Network.h  NetworkTopology.cpp  NetworkTopology.h  Neuron.cpp  Neuron.h  NeuronFileIO.cpp  NeuronFileIO.h  Properties.h  ReadMe.txt  Trainer.cpp  Trainer.h  __ConsoleEntry.cpp  state.nn  stdafx.h
BrabeNetzConsole/: BrabeNetzConsole.cpp  BrabeNetzConsole.vcxproj  BrabeNetzConsole.vcxproj.filters  CMakeLists.txt  Console.cpp  Console.h  Helper.h  Trainer.cpp  Trainer.h  stdafx.h
CppNeuralNetwork/: CppNeuralNetwork.cpp  CppNeuralNetwork.vcxproj  CppNeuralNetwork.vcxproj.filters  Extensions.cpp  Extensions.h  Functions.cpp  Functions.h  Network.cpp  Network.h  NeuronFileIO.h  Trainer.cpp  __ConsoleEntry.cpp  stdafx.cpp
Linux/BrabeNetz/: CMakeLists.txt  Connection.cpp  Connection.h  Extensions.h  Functions.h  Layer.cpp  Network.cpp  Network.h  NetworkTopology.cpp  NetworkTopology.h  Neuron.h
Linux/BrabeNetzConsole/: BrabeNetzConsole.cpp  CMakeLists.txt  Console.cpp  Console.h  Helper.h  Trainer.cpp
NuGet/: BrabeNetz.nuspec  BrabeNetz.targets  build.bat  docs.md  package.xml
